<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="coffee">Expect to enjoy notes of caramel.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="coffee_order_message">You ordered a Coffee.</string>
    <string name="order_intro_text">Choose a delivery method:</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
    <string name="droid_dessert">Droid Dessert</string>
    <string name="choose_a_desert">Choose a desert</string>
    <string name="a_donut">A donut</string>
    <string name="a_froyo">A froyo</string>
    <string name="an_icecream">An icecream</string>
    <string name="a_coffee">A coffee</string>
    <string name="athens">Geo: 41.38, 2.12?Z=13</string>
</resources>